# edgesearch

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
client/: Cargo.toml
client/examples/: basic_usage.rs
client/src/: http.rs  lib.rs  query.rs  responses.rs
workers/api/: Cargo.toml  document body goes here  package.json  wrangler.jsonc
workers/api/src/: lib.rs  main.ts
workers/api/src/data/: bulk.rs  document.rs  encoding.rs  index.rs  index_manager.rs  keyword.rs  keyword_shard.rs  mod.rs
workers/api/src/durable/: journal.rs  mod.rs  reader.rs
workers/api/src/http/: documents.rs  keywords.rs  mod.rs  search.rs
workers/api/src/lexer/: document.rs  lexer.rs  mod.rs  scoring.rs  tokenizer.rs
workers/api/src/util/: http.rs  kv.rs
workers/indexer/: Cargo.toml  index.html  package.json  wrangler.jsonc
workers/indexer/src/: lib.rs
workers/indexer/src/data/: document.rs  index.rs  index_manager.rs  keyword.rs  keyword_shard.rs  mod.rs
workers/indexer/src/durable/: journal.rs  journal_data.rs  mod.rs
workers/indexer/src/http/: documents.rs  index.rs  indexes.rs  keywords.rs  mod.rs  search.rs
workers/indexer/src/lexer/: mod.rs
workers/indexer/src/util/: kv.rs  mod.rs
