[package]
name = "edgesearch"
description = "Serverless full-text search with Cloudflare Workers, WebAssembly, and Roaring Bitmaps"
license = "MIT"
homepage = "https://github.com/wilsonzlin/edgesearch"
readme = "README.md"
keywords = ["full", "text", "search", "index", "bitmap"]
repository = "https://github.com/wilsonzlin/edgesearch.git"
version = "0.4.1"
authors = ["Wilson Lin <code@wilsonl.in>", "Evan Darwin"]
edition = "2021"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[profile.wasm-release]
inherits = "release"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["roaring"]
# WARNING: If using nonportable, disable default features.
nonportable = ["croaring-sys", "libc"]

[dependencies]
worker = { version = "0.6.6", features = ["d1"] }
worker-macros = { version = "0.6" }
yake-rust = { version = "1.0.3" }
lingua = { version = "1.7.1", default-features = false, features = ["english"] }
nanoid = { version = "0.4" }
sha2 = { version = "0.10.9" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0.16"
getrandom = { version = "0.2.7", features = ["js"] }
url = "2"
futures = "0.3"
once_cell = "1.21"


byteorder = "1.3.2"
clap = "2.0"
croaring-sys = { version = "0.5.0", optional = true }
libc = { version = "0.2.97", optional = true }
roaring = { version = "0.7.0", optional = true }
structopt = "0.3.5"

[dev-dependencies]
worker-build = { version = "0.1.10" }
