[package]
name = "edgesearch"
description = "Serverless full-text search and document store with Cloudflare Workers and WASM"
license = "MIT"
readme = "README.md"
keywords = ["fulltext", "full", "text", "search", "index", "document"]
homepage = "https://github.com/EvanDarwin/edgesearch"
repository = "https://github.com/EvanDarwin/edgesearch.git"
version = "0.5.0"
authors = ["Wilson Lin <code@wilsonl.in>", "Evan Darwin <me@evandarwin.com>"]
edition = "2021"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]

[profile.wasm-release]
inherits = "release"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
nonportable = ["libc"]

[dependencies]
worker = { version = "0.6.6", features = ["d1"] }
worker-macros = { version = "0.6" }
yake-rust = { version = "1.0.3" }
lingua = { version = "1.7.1", default-features = false, features = ["english"] }
nanoid = { version = "0.4" }
sha2 = { version = "0.10.9" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0.16"
getrandom = { version = "0.2.7", features = ["js"] }
url = "2"
futures = "0.3"
once_cell = "1.21"
libc = { version = "0.2.97", optional = true }

[dev-dependencies]
worker-build = { version = "0.1.10" }
